--- a/day_1_commits.ipynb
+++ b/day_1_commits.ipynb
@@ -378,6 +378,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Hello world\n<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = 'Hello world'  \n",
+    "print(str1)\n",
+    "print(type(str1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "rohit\nit\nit\ntihor\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"rohit\"   \n",
+    "#index slicing\n",
+    "print(str[0:])   # 0 to 4th index\n",
+    "print(str[3:5])  # 3rd to 4th index \n",
+    "print(str[-2:]) #negative indexing will print from the other end\n",
+    "print(str[::-1])  #simplest way to reverse string using step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "HelloHelloHello\nHello world\no\nll\nFalse\nFalse\nC://python37\nThe string str : Hello\nThe string str : Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"Hello\"     \n",
+    "str1 = \" world\"    \n",
+    "print(str*3) # replicates    \n",
+    "print(str+str1)# gives Hello world     \n",
+    "print(str[4]) # prints o                \n",
+    "print(str[2:4]); # prints ll                    \n",
+    "print('w' in str) # as w is not present in str, it prints false \n",
+    "print('wo' not in str1) # as wo is present in str1,it prints false      \n",
+    "print(r'C://python37') # prints C://python37 as it is written    \n",
+    "print(\"The string str : %s\"%(str)) # prints The string str : Hello  \n",
+    "print(\"The string str :\",str)  # same as before"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
