--- a/day_7_commits.ipynb
+++ b/day_7_commits.ipynb
@@ -10,13 +10,126 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.5"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python385jvsc74a57bd01e915f0a29dc84041eaeb02b7b1a21c440e37a87b61d44d5e84a515737dc82bc",
+   "display_name": "Python 3.8.5 64-bit (conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Tim': 18, 'Charlie': 12, 'Robert': 25}\n{'Tiffany': 22}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dict = {'Tim': 18,'Charlie':12,'Tiffany':22,'Robert':25}\t\n",
+    "Boys = {'Tim': 18,'Charlie':12,'Robert':25}\n",
+    "Girls = {'Tiffany':22}\t\n",
+    "studentX=Boys.copy()\n",
+    "studentY=Girls.copy()\n",
+    "print(studentX)\n",
+    "print(studentY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Tim': 18, 'Charlie': 12, 'Tiffany': 22, 'Robert': 25, 'Sarah': 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dict = {'Tim': 18,'Charlie':12,'Tiffany':22,'Robert':25}\t\n",
+    "Dict.update({\"Sarah\":9})\n",
+    "print(Dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nTrue\nFalse\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dict = {'Tim': 18,'Charlie':12,'Tiffany':22,'Robert':25}\n",
+    "Boys = {'Tim': 18,'Charlie':12,'Robert':25}\n",
+    "Girls = {'Tiffany':22}\n",
+    "for key in list(Dict.keys()):\n",
+    "    if key in list(Boys.keys()):\n",
+    "        print(True)\n",
+    "    else:       \n",
+    "        print(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'username': 'XYZ', 'email': 'xyz@gmail.com', 'location': 'Mumbai', 'firstName': 'Nick', 'lastName': 'Price'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict1 = {\"username\": \"XYZ\", \"email\": \"xyz@gmail.com\", \"location\":\"Mumbai\"}\n",
+    "\n",
+    "my_dict2 = {\"firstName\" : \"Nick\", \"lastName\": \"Price\"}\n",
+    "\n",
+    "my_dict1.update(my_dict2)\n",
+    "\n",
+    "print(my_dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nTrue\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"username\": \"XYZ\", \"email\": \"xyz@gmail.com\", \"location\":\"Mumbai\"}\n",
+    "print(\"email\" in my_dict)\n",
+    "print(\"location\" in my_dict)\n",
+    "print(\"test\" in my_dict)"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
